--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/userservicetestfinalapplication
 spring.datasource.username=userservicetestfinalapplication
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
