--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+# JWT Configuration
+jwt.secret=MySuperSecretKeyThatIsStrictlyAtLeast32CharsLong!
+jwt.algorithm=HS256
+jwt.expiration=3600000
+# (1 hour in milliseconds)
